# zero2prod

./: Cargo.toml  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs  welcome.rs
tests/: health_check.rs  init.rs  subscriptions.rs
