[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
log = "0.4.20"
#tokio = { version = "1.32.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.20"

